--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
 
 /*
 Theme Name: Agapanto
-Theme URI: https://elica.com/themes/agapanto/
-Author: ThemeZeehttps://elica-webservices.it/wp-admin/theme-editor.php?file=style.css&theme=agapanto
-Author URI: https://elica.com
-Description: Agapanto is an elegant designed ClassicPress theme featuring a splendid fullscreen image slideshow. The clean typography and spacious white layout makes it great to share your stories. You can use the theme as simple blog or easily create a news website with the widget-based Magazine Homepage template.
-Version: 2.4.0
-Requires at least: 5.2
-Tested up to: 6.5
+Theme URI: https://elica-webservices.it/
+Author: Elisabetta Carrara
+Author URI: https://elica-webservices.it/
+Description: Agapanto is an elegant designed ClassicPress theme featuring a splendid fullscreen image slideshow. The clean typography and spacious white layout makes it great to share your stories. You can use the theme as simple blog or easily create a news website with the widget-based Magazine Homepage template or build a Company website taking advantage of footer widgets.
+Version: 1.0
+Requires at least: 1.0
+Tested up to: 2.1
 Requires PHP: 5.6
 AMP: true
 License: GNU General Public License v2 or later
