--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@ Author: Elisabetta Carrara
 Author URI: https://elica-webservices.it/
 Description: Agapanto is an elegant designed ClassicPress theme featuring a splendid fullscreen image slideshow. The clean typography and spacious white layout makes it great to share your stories. You can use the theme as simple blog or easily create a news website with the widget-based Magazine Homepage template or build a Company website taking advantage of footer widgets.
 Version: 1.0
-Requires at least: 1.0
-Tested up to: 2.1
+Requires CP: 1.0
 Requires PHP: 5.6
 AMP: true
 License: GNU General Public License v2 or later
